--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">I am a final semester student at Raharja University, which is located in Tangerang City. and God willing, I will finish my thesis in the near future, thank God I can go to college for about 3.5 years, last GPA 3.58</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">I am a fresh graduate Graduated with Caumlude predicate and 3.5
+                        Lecture Year. Active in social activities, able to work in a team
+                        and have a creative spirit. I am happy with the world of Technology, able
+                        using the PHP programming language in making a website.</p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">I'm currently honing my skills as a laravel developer, liking new things, and being able to work with a team. And hopefully I can make it happen as soon as possible, thank you.</p></div>
                     <!-- saat ini saya sedang mengasah kemampuan saya menjadi seorang laravel developer, menyukai hal baru, dan mampu bekerja sama dengan tim. Dan semoga saya bisa mewujudukan itu secepatnya, terimakasih-->
                 </div>
