--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Mahasiswa - Freelancer</p>
+                <p class="masthead-subheading font-weight-light mb-0">Fesh Graduated</p>
             </div>
         </header>
         <!-- Portfolio Section-->
